--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scheduledtasks",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A TypeScript-based task scheduler with web dashboard and monitoring",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "tsc",
     "prepublishOnly": "npm run build",
-    "start": "npx ts-node src/server.ts",
+    "start": "npx ts-node runOnBuild.ts &&  npx ts-node src/server.ts",
     "dev": "npx ts-node --watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
