--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prepublishOnly": "npm run build",
     "start": "npx ts-node runOnBuild.ts &&  npx ts-node src/server.ts",
     "dev": "npx ts-node --watch src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "npm version patch && npm publish && git push && git push --tags"
   },
   "keywords": [
     "typescript",
