--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hellokids86/scheduledtasks",
-  "version": "1.0.13",
+  "name": "scheduledtasks",
+  "version": "1.0.14",
   "description": "A TypeScript-based task scheduler with web dashboard and monitoring",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
